...
    <string name="save">Save</string>
    <string name="menu_refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="weather_condition_icon_content_description">Weather Condition Icon</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="today">Today</string>
    <string name="USA">United States of America</string>
    <string name="UK">United Kingdom</string>
    <string name="search_for_places">Search for Places...</string>
    <string name="twelve_hour">12 Hour Clock Format</string>
    <string name="twenty_four_hour">24 Hour Clock Format</string>
    <string name="Sunny">Sunny</string>
...
    <string name="precipitation_notification_locations">Precipitation Notification Locations</string>
    <string name="choose_precip_locations">Choose which locations to show precipitation notifications</string>
    <string name="get_local_forecast">Get daily notifications for local forecast</string>
    <string name="show_local_forecast_title">Show Local Forecast?</string>
    <string name="show_precip_title">Precipitation Notifications?</string>
    <string name="loading_failed">Failed to load… </string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="add_weather_fab_description">Add Weather Location</string>
    <string name="alert_fab_description">Weather Alerts</string>
    <string name="back_button">Back</string>
    <string name="action_menu">Action Menu</string>
    <string name="weather_condition_icon">weather condition icon</string>
    <string name="expand_button_content_description">See detailed hourly forecast.</string>
    <string name="places">Places</string>
    <string name="scroll_to_top">Scroll To Top</string>
    <string name="twelve_hour_clock_format">hh:mm a</string>
...
