...
        country = "United States of America",
        lat = 213.3,
        localtime = "2022-12-27 11:29",
        localtime_epoch = 1672158565,
        lon = 123.4,
        tz_id = "America/New_York",
        name = "Miami",
        region = "Florida"
    )

    private val currentWeatherData = CurrentWeatherData(
        condition = Condition(code = 1003, icon = "//cdn.weatherapi.com/weather/64x64/day/116.png", text = "Cloudy"),
        feelslike_c = 123.2,
...
